wrap to a fixed layout

--- a/fedocal/static/fedocal.css
+++ b/fedocal/static/fedocal.css
@@ -1,13 +1,19 @@
 body {
+    margin: 0px;
+    padding: 0px;
+    font-size: small;
+    font-family: "Liberation Sans","Lucida Grande", "Luxi Sans", "Bitstream Vera Sans", helvetica, verdana, arial, sans-serif;
+    color: #666;
+    background: #fff url(header-bg.png) repeat-x;
+}
+
+#wrap {
+    min-width: 750px;
+    max-width:1100px;
+    margin-left:auto;
+    margin-right:auto;
     padding: 0;
-    background: url(html-bg.png)
-    repeat-x scroll 0 0 #FFF;
-    height: 100%;
-    margin: 0;
-    color: #2E3436;
-    font-family: Cantarell,'Droid Sans','DejaVu Sans',Arial,sans-serif;
-    font-size: 13px;
-    line-height: 1.5;
+    text-align: left;
 }
 
 h4 {
